tests/ui/type-alias-impl-trait/structural-match-no-leak.stderr
error: opaque type `Bar` cannot be used in patterns
  --> $DIR/structural-match-no-leak.rs:16:9
   |
LL | const LEAK_FREE: Bar = leak_free();
   | -------------------- constant defined here
...
LL |         LEAK_FREE => (),
   |         ^^^^^^^^^ opaque type can't be used in patterns

error: aborting due to 1 previous error

